# Being

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  RESEARCH_MASTER.md  RUNBOOK.md  environment.yml  pyproject.toml
assets/gaussiantalker_round2/: custom_audio_render.mov  test_fine1000_renders.mov  test_fine3000_audio_attention.mov  test_fine3000_eye_attention.mov  (+5 more)
being/: __init__.py  cli.py
configs/: default.yaml
docker/: Dockerfile  openface.Dockerfile
docs/: INSTALL.md  flashavatar-explainer.html  splatting-avatar-pipeline.html
notes/: 2026-02-22.md  2026-02-23-flashavatar-research.md  2026-02-23-flashavatar-setup.md  2026-02-23-gaze-redirection-research.md  2026-02-23.md  2026-02-24-flame-tracker-switch.md  2026-02-24-flashavatar-training.md  2026-02-24-mouth-mask-bug.md  2026-02-25-SUMMARY.md  2026-02-25-crop_recovery_guide.md  2026-02-25-crop_transformation_diagram.md  2026-02-25-gaussiantalker-round2.md  2026-02-25-hybrid-pipeline-plan.md  2026-02-25-insta_integration.md  2026-02-25-lip-sync-post-processing-research.md  2026-02-25-methods-comparison.md  2026-02-25-metrical_tracker_preprocessing.md  2026-02-25-next-steps.md  2026-02-25-quick_reference.md  2026-02-25-splatting-avatar-phase2.md  2026-02-25_endofday-modern-gaussiantalker-vision.md  recording-script-30s.md  recording-script.md
old_plan_docs/: PLAN_gaussiantalker.md  RESEARCH_flame_avatars.md
scripts/: download_checkpoints.sh  fix_gaze.py  recover_metrical_tracker_crop.py  setup.sh  setup_artalk.sh  setup_artalk_motion_only.sh
tests/: test_audio_buffer.py  test_cli.py
(+12 files in other folders)
